--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
 	<title>Socket IO </title>
+	<script src="/socket.io/socket.io.js"></script>
+
+	<script>
+		 var socket = io();
+		 socket.on('message', function(data){document.write(data)});
+	</script>
+
 </head>
 
 <body>
 	Hello World !
 </body>
-
-
 </html>
